--- a/index.html
+++ b/index.html
@@ -450,7 +450,7 @@
                 <span id="element"></span>
             </div>
             <div class="rightSection">
-                <img src="image.png.jpg" alt="Profile picture">
+                <img src="image.jpg" alt="Profile picture">
             </div>
         </section>
 
@@ -617,5 +617,6 @@
         });
     </script>
 </body>
+
 
 </html>
