--- a/index.html
+++ b/index.html
@@ -466,7 +466,7 @@
                 </p>
                 <div class="about-highlights">
                     <!-- ✅ Resume Card added here -->
-                    <a href="rahi.pdf.pdf" target="_blank" class="resume-card">📄 View Resume</a>
+                    <a href="rahi.pdf" target="_blank" class="resume-card">📄 View Resume</a>
 
                     <div class="card">🎓 B.Tech AIML Student</div>
                     <div class="card">💡 Tech Enthusiast</div>
@@ -617,5 +617,6 @@
         });
     </script>
 </body>
+
 
 </html>
