--- a/index.html
+++ b/index.html
@@ -580,8 +580,8 @@
                 <div class="contact-item">📧 Email: <a href="mailto:doshirahi016@gmail.com">doshirahi016@gmail.com</a>
                 </div>
                 <div class="contact-item">📱 Phone: <a href="tel:+919004987910">+919004987910</a></div>
-                <div class="contact-item">💼 LinkedIn: <a href="https://www.linkedin.com/in/your-linkedin"
-                        target="_blank">linkedin.com/in/your-linkedin</a></div>
+                <div class="contact-item">💼 LinkedIn: <a href="https://www.linkedin.com/in/rahi-doshi-443039277?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3BtAiBrwgxR7Cf5WEC53v3aA%3D%3D"
+                        target="_blank">Linkedin</a></div>
                 <div class="contact-item">🐙 GitHub: <a href="https://github.com/your-github"
                         target="_blank">github.com/your-github</a></div>
             </div>
@@ -620,3 +620,4 @@
 
 
 </html>
+
