--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rahi - Developer Portfolio</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+    <head>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+    </head>
     <style>
         * {
             margin: 0;
@@ -298,25 +301,45 @@
             font-size: 1.1rem;
         }
 
-        /* Contact Section */
+         /* Contact Section */
+        #contact {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            min-height: 100vh;
+            text-align: center;
+        }
+
         #contact h1 {
-            font-size: 2.5rem;
-            margin-bottom: 20px;
+            font-size: 3rem;
+            margin-bottom: 30px;
             color: #ff00ff;
         }
 
         .contact-box {
-            background: rgba(255, 255, 255, 0.05);
-            padding: 30px;
-            border-radius: 15px;
-            box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.4);
-            max-width: 600px;
-            margin: auto;
-            font-size: 1.2rem;
+            background: rgba(255, 255, 255, 0.07);
+            padding: 50px;
+            border-radius: 20px;
+            box-shadow: 0px 8px 25px rgba(0, 0, 0, 0.5);
+            max-width: 800px;
+            width: 90%;
+            font-size: 1.4rem;
         }
 
         .contact-item {
-            margin: 15px 0;
+            margin: 25px 0;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            gap: 15px;
+            /* spacing between icon and text */
+        }
+
+        .contact-item i {
+            color: #00e5ff;
+            font-size: 1.6rem;
+            transition: 0.3s;
         }
 
         .contact-item a {
@@ -330,21 +353,9 @@
             color: #ff00ff;
         }
 
-        @media (max-width: 900px) {
-
-            .firstSection,
-            #about,
-            #skills {
-                flex-direction: column;
-                text-align: center;
-            }
-
-            .rightSection img {
-                width: 250px;
-                height: 250px;
-            }
+        .contact-item i:hover {
+            color: #ff00ff;
         }
-
         /* Resume Card Styling */
         .resume-card {
             background: rgba(0, 229, 255, 0.15);
@@ -364,62 +375,74 @@
             transform: translateY(-5px);
         }
 
+    
         /* Projects Section */
         #projects {
             min-height: 100vh;
-            padding: 100px 10%;
+            padding: 120px 10%;
             text-align: center;
         }
 
         #projects h1 {
-            font-size: 3rem;
+            font-size: 3.2rem;
+            /* bigger heading */
             color: #ff00ff;
-            margin-bottom: 50px;
+            margin-bottom: 60px;
         }
 
         .projects-container {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-            gap: 30px;
+            grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+            /* wider cards */
+            gap: 40px;
+            /* more spacing between cards */
         }
 
         .project-card {
-            background: rgba(255, 255, 255, 0.07);
-            padding: 25px;
-            border-radius: 15px;
-            box-shadow: 0px 6px 18px rgba(0, 0, 0, 0.35);
+            background: rgba(255, 255, 255, 0.1);
+            padding: 40px;
+            /* increased padding */
+            border-radius: 20px;
+            box-shadow: 0px 8px 25px rgba(0, 0, 0, 0.5);
             transition: transform 0.3s ease, background 0.3s ease;
         }
 
         .project-card:hover {
-            transform: translateY(-8px);
-            background: rgba(255, 0, 255, 0.15);
+            transform: translateY(-10px) scale(1.02);
+            /* little pop-up effect */
+            background: rgba(255, 0, 255, 0.2);
         }
 
         .project-card h2 {
-            font-size: 1.8rem;
-            margin-bottom: 12px;
+            font-size: 2rem;
+            /* bigger title */
+            margin-bottom: 15px;
             color: #00e5ff;
         }
 
         .project-card p {
-            font-size: 1rem;
-            margin-bottom: 15px;
+            font-size: 1.2rem;
+            /* bigger text */
+            margin-bottom: 20px;
+            line-height: 1.6;
         }
 
         .project-card a {
             display: inline-block;
-            padding: 10px 20px;
-            border-radius: 8px;
+            padding: 12px 25px;
+            border-radius: 10px;
             background: linear-gradient(90deg, #ff00ff, #00e5ff);
             color: white;
             font-weight: 600;
+            font-size: 1.1rem;
+            /* bigger button text */
             text-decoration: none;
             transition: 0.3s;
         }
 
         .project-card a:hover {
             background: linear-gradient(90deg, #00e5ff, #ff00ff);
+            transform: scale(1.05);
         }
     </style>
 </head>
@@ -573,17 +596,26 @@
         </section>
 
 
-        <!-- Contact -->
+         <!-- Contact -->
         <section id="contact">
             <h1>Contact Me</h1>
             <div class="contact-box">
-                <div class="contact-item">📧 Email: <a href="mailto:doshirahi016@gmail.com">doshirahi016@gmail.com</a>
+                <div class="contact-item">
+                    <i class="fas fa-envelope"></i>
+                    <a href="mailto:doshirahi016@gmail.com">doshirahi016@gmail.com</a>
                 </div>
-                <div class="contact-item">📱 Phone: <a href="tel:+919004987910">+919004987910</a></div>
-                <div class="contact-item">💼 LinkedIn: <a href="https://www.linkedin.com/in/rahi-doshi-443039277?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3BtAiBrwgxR7Cf5WEC53v3aA%3D%3D"
-                        target="_blank">Linkedin.RahiDoshi</a></div>
-                <div class="contact-item">🐙 GitHub: <a href="https://github.com/RahiDoshi?tab=repositories"
-                        target="_blank">Github.RahiDoshi</a></div>
+                <div class="contact-item">
+                    <i class="fas fa-phone"></i>
+                    <a href="tel:+919004987910">+91 9004987910</a>
+                </div>
+                <div class="contact-item">
+                    <i class="fab fa-linkedin"></i>
+                    <a href="https://www.linkedin.com/in/RahiDoshi" target="_blank">Linkedin.RahiDoshi</a>
+                </div>
+                <div class="contact-item">
+                    <i class="fab fa-github"></i>
+                    <a href="https://github.com/RahiDoshi" target="_blank">Github.RahiDoshi</a>
+                </div>
             </div>
         </section>
     </main>
@@ -620,5 +652,6 @@
 
 
 </html>
+
 
 
