--- a/index.html
+++ b/index.html
@@ -610,7 +610,7 @@
                 </div>
                 <div class="contact-item">
                     <i class="fab fa-linkedin"></i>
-                    <a href="https://www.linkedin.com/in/RahiDoshi" target="_blank">Linkedin.RahiDoshi</a>
+                    <a href="https://www.linkedin.com/in/rahi-doshi-443039277?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3Bm%2BTHoOpdRa%2B5HI%2BmZd1%2BYw%3D%3D" target="_blank">Linkedin.RahiDoshi</a>
                 </div>
                 <div class="contact-item">
                     <i class="fab fa-github"></i>
@@ -652,6 +652,7 @@
 
 
 </html>
+
 
 
 
