--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         nav .left {
             font-size: 2rem;
             font-weight: 700;
-            color: #ff00ff;
+            color: white;
         }
 
         nav ul {
@@ -652,6 +652,7 @@
 
 
 </html>
+
 
 
 
